--- a/page17.html
+++ b/page17.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6QgitsG48" id="content5-4y">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QgitsG48" id="content5-4y">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nOB6NkIZ7sJffOloV9HfTncvSh+IXi8tPOl9nl0IJIDySdeWgItZ2dfyaj4Ie46MqhjItz4pBuBcES5sBXq1VYVcD992ceyFj8NYWf3Eh6iif1HEe/XZHlohgOtyio0B">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kuV6Q7medOgqzJ3+W9rLgaplI8N/Hr1K/I1hmrKArunfAO9mel/G9FCuj8dkd6Qoa8zhoNTstobD8YK80nmHjj2FoDnYdQl0X4aR2N4yg7d2V4WOLuX1u37EgK9TwMP7">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
