create github pages

--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MSvRtESbEx+cLKsWgP/71pQHQAq+HiNCKBgIuGJhzNqkrvHt+bfW6d14rA0db7oRaT2/nlw+P374D+VIO70zOBApvX1QrF6fCAM9DDzTF4zs/9TtgxHuOVrJ709hGG2C">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vv5qSfaGrCJQiJQOz/02+vc/w3ecFbeV45JtMKID90ZU6UPNwAgbddTSJWzHzZCueBgf/f0F2sG17xkLlBCOtnmauSqf6AnbTp7YRXp7dVnSde3XOUN70H4QPjFjDs0X">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
