create github pages

--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7wPjK7cHABNesC2WizcnlkVVWWXO9hW5Q6Y7UiwDK/8KZgf+mrvx2b4g90nd/y1/RErpScH9jna/10iK3H5GDQmFQEPHNzozIuOOLZRROqRmoCs178nwGmNb5TPWu9zO">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="w9W9TUW2p5W+TDlwbGx9kgpjuBc/I7vb5Cfs7jz05oo3sDHbRBH1cwirXRqIRu7AWIeWoK4Gb9TvxNQNCmULVpI5pIk2nmKDYbdXdrurlV47B2yvwRJkcUT/NL/BmYnY">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
