--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -122,7 +122,7 @@
             </div>
 
             <div class="mbr-figure pl-lg-5" style="width: 80%;">
-              <img src="assets/images/dsc03465-1162x872.jpg" alt="" title="">
+              <img src="assets/images/dsc03465-902x677.jpg" alt="" title="">
             </div>
         </div>
     </div>
@@ -715,7 +715,7 @@ Specializing in Home &amp; Auto Insurance<br></h3>
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/117cdf5afc98f693c82b8e20f5ec731e-220x147.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/20180919-11174022-318x212.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
