--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hSEihk7ZSFVh6gVSOtS2nBltbxJNuDQhCV493ykH+qjOZJ2eKZob1qPkoMi8dsqWAHPT61m+w7ScYLgKtSmUjiY7VDQta7Pr6m4n9u8X1WCE6BapJ1e3c97rvkRmalFq">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="u9Y3g/+ZWUuX1iCwhtwLJZNbIZvLW7qogt2MaiMW425JSwJ3XYvNNwPW/SJoJXEO4oUU5vqEFkrDvCY7Qn9Dw+1sC5i3F0oBNUx/kVY52TOeHVfPjABRQIyeyjA/h30R">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
