--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VJUQOAUTcURFjk226CymCysuksoHByLGCRfvUhcdmOdlZcejMm3ft6QGy6RiM1FiH7gK31NcKvh5pv1Jf0TnanmSAXQ4fJle3sMcl+A30JEwO84pMQ1QlosNELZvou7W">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1NmV4kNuaDsQ7O55cpuDKCXM4j0GT0VvKuRfIAghA4dWxRrxgIatF31FBrnKozMVxwLbQT01QJNPE4CznNoXJWBs86/H2PRNMibvEMAR8Mf4d+B+1gLv3QRKpcie945f">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
