--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fRh6KvtEc3xjH74TZESbkKqVqmH9PmOvNYpnt3lMjfWMwhAL7Rn+BAPL4DkP/Q6N4IUWtK05Pxu6RwLtzUlT4WOoyGX2S5RD3+i8jCTjhcAGBgMOnykkRhiMH1sdjGX8">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hKoYHYuzFcq27tkcVUQX+xGxZJpFkm/ZhFI9R45APd48GSGHs0QYD6VGU1TZRAHDlw8dloOmUjDxFDPlJ5297To3KUkIJjOzblUeXsbraoSZTiqxGKYtTZc9z2/UVyJJ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
