--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -715,7 +715,7 @@ Specializing in Home &amp; Auto Insurance<br></h3>
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/20180919-1117405-318x212.png" alt="Mobirise" title="">
+                    <img src="assets/images/20180919-11174022-318x212.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
