--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iRzmD0fZNVxVhh5X0LDUMDmtbVpWrROltRTaDaHdIvSFXS89DOnjh00WRqGvpd3DTs/DTc5WzLBdn2VPgMJL1tUnOojK1GjB2XYaqpTqv+SborR1mzct2JKDb7nv2tHP">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xXjWgNz4PdhyY+/riZkzdS1aIXesK4I7LukbAsuSD30jjs9XtYaT5t1cNquf41FwxrjehNkG434pBgqqfTUdQGn+he4p1+EceaymXG0HCvqdDFsnYR+75HZOlE2YXewA">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
