--- a/page7.html
+++ b/page7.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                 <div class="mbr-figure" style="width: 125%;">
-                     <img src="assets/images/pexels-photo-1462630-1125x750.jpg" alt="Mobirise" title="">
+                     <img src="assets/images/vasily-koloda-620886-unsplash-1-1138x759.jpg" alt="Mobirise" title="">
                 </div>
             </div>
         </div>
